--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 
-  <link rel="stylesheet" type="text/css" href="css/estilos.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 
   <title>Sesion 7</title>
 
@@ -15,18 +15,51 @@
 
 <body>
 
+  <h1>Hola sass</h1>
+  <h2>Hola mixin</h2>
+  <h3>Hola mixin</h3>
+  <h4>Hola mixin</h4>
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+  <!--
+  <section class="container blog">
+    <div class="row">
+      <div class="col">
+        <h2 class="title">Learn how to grow your ecommerce business.</h2>
+        <article class="process-list">
+          <div class="process">
+            <div class="process-icon">
+              <img src="./assets/icons/build.png" alt="Build icon" />
+            </div>
+            <div class="process-description">
+              <h3>Build</h3>
+              <p>and scale your ecommerce store</p>
+            </div>
+          </div>
+          <div class="process">
+            <div class="process-icon">
+              <img src="./assets/icons/attract.png" alt="Attract icon" />
+            </div>
+            <div class="process-description">
+              <h3>Attract</h3>
+              <p>your target audience and grow site traffic</p>
+            </div>
+          </div>
+          <div class="process">
+            <div class="process-icon">
+              <img src="./assets/icons/convert.png" alt="Convert icon" />
+            </div>
+            <div class="process-description">
+              <h3>Convert</h3>
+              <p>readers to subscribers and customers</p>
+            </div>
+          </div>
+        </article>
+        <button>Read the blog</button>
+      </div>
+      <div class="col"></div>
+      <div class="col"></div>
+    </div>
+  </section> -->
 
 </body>
 
